gitea/gitea-route-ssh.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea-route
  namespace: homeserver

spec:
  parentRefs:
  - name: homeserver

  hostnames:
  - gitea-ssh.homeserver.local

  rules:
  - backendRefs:
    - name: gitea-svc
      port: 2222
